--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <h2>Featured Collections</h2>
     <div class="slider">
       <div class="slides">
-        <div class="slide"><img src="C:\Users\brije\Downloads\project\Image1.jpeg" alt="Collection 1"></div>
+        <div class="slide"><img src="Image1.jpeg" alt="Collection 1"></div>
         <div class="slide"><img src="C:\Users\brije\Downloads\project\Image2.jpeg" alt="Collection 2"></div>
         <div class="slide"><img src="C:\Users\brije\Downloads\project\Image1.jpeg" alt="Collection 3"></div>
       </div>
@@ -308,3 +308,4 @@
   </script>
 </body>
 </html>
+
