--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <!-- ABOUT -->
   <section class="about" id="about">
-    <img src="C:\Users\brije\Downloads\-OWq3rGbaEzDZBck7cZ8.jpg" alt="Jewelry showcase">
+    <img src="-OWq3rGbaEzDZBck7cZ8.jpg" alt="Jewelry showcase">
     <div class="about-text">
       <h2>About Us</h2>
       <p>At TipTop Jewels, we blend artistry and craftsmanship to create jewelry that transcends generations. Each piece reflects luxury, sophistication, and timeless design.</p>
@@ -174,8 +174,8 @@
     <div class="slider">
       <div class="slides">
         <div class="slide"><img src="Image1.jpeg" alt="Collection 1"></div>
-        <div class="slide"><img src="C:\Users\brije\Downloads\project\Image2.jpeg" alt="Collection 2"></div>
-        <div class="slide"><img src="C:\Users\brije\Downloads\project\Image1.jpeg" alt="Collection 3"></div>
+        <div class="slide"><img src="Image2.jpeg" alt="Collection 2"></div>
+        <div class="slide"><img src="Image1.jpeg" alt="Collection 3"></div>
       </div>
       <button class="slider-btn prev">&#10094;</button>
       <button class="slider-btn next">&#10095;</button>
@@ -187,9 +187,9 @@
     <h2>Our Creations</h2>
     <div class="gallery">
       <img src="tiptopjewels\images\P1.jpg" alt="Product 1">
-      <img src="C:\Users\brije\Downloads\project\P2.jpg" alt="Product 2">
-      <img src="C:\Users\brije\Downloads\project\P3.jpg" alt="Product 3">
-      <img src="C:\Users\brije\Downloads\project\P4.jpg" alt="Product 4">
+      <img src="P2.jpg" alt="Product 2">
+      <img src="P3.jpg" alt="Product 3">
+      <img src="P4.jpg" alt="Product 4">
     </div>
   </section>
 
@@ -308,4 +308,5 @@
   </script>
 </body>
 </html>
+
 
