--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     <h2>Our Creations</h2>
     <div class="gallery">
       <img src="tiptopjewels\images\P1.jpg" alt="Product 1">
-      <img src="P2.jpg" alt="Product 2">
-      <img src="P3.jpg" alt="Product 3">
-      <img src="P4.jpg" alt="Product 4">
+      <img src="tiptopjewels\images\P2.jpg" alt="Product 2">
+      <img src="tiptopjewels\images\P3.jpg" alt="Product 3">
+      <img src="tiptopjewels\images\P4.jpg" alt="Product 4">
     </div>
   </section>
 
@@ -308,5 +308,6 @@
   </script>
 </body>
 </html>
+
 
 
