--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
   <section id="products">
     <h2>Our Creations</h2>
     <div class="gallery">
-      <img src="P1.jpg" alt="Product 1">
-      <img src="P2.jpg" alt="Product 2">
-      <img src="P3.jpg" alt="Product 3">
-      <img src="P4.jpg" alt="Product 4">
+      <img src="P2.jpg" alt="Product 1">
+      <img src="P2.Jpg" alt="Product 2">
+      <img src="P3.Jpg" alt="Product 3">
+      <img src="P4.Jpg" alt="Product 4">
     </div>
   </section>
 
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
