--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     <h2>Our Creations</h2>
     <div class="gallery">
       <img src="Image-3.jpeg" alt="Product 1">
-      <img src="P2.Jpg" alt="Product 2">
-      <img src="P3.Jpg" alt="Product 3">
-      <img src="P4.Jpg" alt="Product 4">
+      <img src="Image2.jpeg" alt="Product 2">
+      <img src="Image1.jpeg" alt="Product 3">
+      <img src="Image2.jpeg" alt="Product 4">
     </div>
   </section>
 
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
