--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     /* ---------- HERO SECTION ---------- */
     .hero {
       height: 100vh;
-      background: url('assets/images/hero.jpg') center/cover no-repeat;
+      background: url('hero.jpg') center/cover no-repeat;
       display: flex; flex-direction: column; justify-content: center; align-items: center;
       text-align: center; color: #fff;
       position: relative;
@@ -173,7 +173,7 @@
 
   <!-- ABOUT -->
   <section class="about" id="about">
-    <img src="assets/images/about.jpg" alt="Gold and diamond jewelry showcase" loading="lazy">
+    <img src="about.jpg" alt="Gold and diamond jewelry showcase" loading="lazy">
     <div class="about-text">
       <h2>About Us</h2>
       <p>At TipTop Jewels, we blend artistry and craftsmanship to create jewelry that transcends generations. Each piece reflects luxury, sophistication, and timeless design.</p>
@@ -185,9 +185,9 @@
     <h2>Featured Collections</h2>
     <div class="slider">
       <div class="slides">
-        <div class="slide"><img src="assets/images/collection1.jpg" alt="Diamond Ring Collection" loading="lazy"></div>
-        <div class="slide"><img src="assets/images/collection2.jpg" alt="Necklace Collection" loading="lazy"></div>
-        <div class="slide"><img src="assets/images/collection3.jpg" alt="Earrings Collection" loading="lazy"></div>
+        <div class="slide"><img src="collection1.jpg" alt="Diamond Ring Collection" loading="lazy"></div>
+        <div class="slide"><img src="collection2.jpg" alt="Necklace Collection" loading="lazy"></div>
+        <div class="slide"><img src="collection3.jpg" alt="Earrings Collection" loading="lazy"></div>
       </div>
       <button class="slider-btn prev" aria-label="Previous Slide">&#10094;</button>
       <button class="slider-btn next" aria-label="Next Slide">&#10095;</button>
@@ -198,10 +198,10 @@
   <section id="products">
     <h2>Our Creations</h2>
     <div class="gallery">
-      <img src="assets/images/product1.jpg" alt="Gold Bracelet" loading="lazy">
-      <img src="assets/images/product2.jpg" alt="Diamond Ring" loading="lazy">
-      <img src="assets/images/product3.jpg" alt="Emerald Necklace" loading="lazy">
-      <img src="assets/images/product4.jpg" alt="Pearl Earrings" loading="lazy">
+      <img src="product1.jpg" alt="Gold Bracelet" loading="lazy">
+      <img src="product2.jpg" alt="Diamond Ring" loading="lazy">
+      <img src="product3.jpg" alt="Emerald Necklace" loading="lazy">
+      <img src="product4.jpg" alt="Pearl Earrings" loading="lazy">
     </div>
   </section>
 
@@ -323,3 +323,4 @@
   </script>
 </body>
 </html>
+
