--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
   <section id="products">
     <h2>Our Creations</h2>
     <div class="gallery">
-      <img src="product1.jpg" alt="Gold Bracelet" loading="lazy">
-      <img src="product2.jpg" alt="Diamond Ring" loading="lazy">
-      <img src="product3.jpg" alt="Emerald Necklace" loading="lazy">
-      <img src="product4.jpg" alt="Pearl Earrings" loading="lazy">
+      <img src="P1.jpg" alt="Gold Bracelet" loading="lazy">
+      <img src="P2.jpg" alt="Diamond Ring" loading="lazy">
+      <img src="P3.jpg" alt="Emerald Necklace" loading="lazy">
+      <img src="P4.jpg" alt="Pearl Earrings" loading="lazy">
     </div>
   </section>
 
@@ -323,4 +323,5 @@
   </script>
 </body>
 </html>
+
 
